--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Messin Around</title>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
     <script src="src/index.js"></script>
     <body>
  
