--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,14 @@
-<html lang="en"> 
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Messin Around</title>
+    <title>p5</title>
+
+<body>
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
     <script src="src/sinwave2.js"></script>
-    <body>
- 
-    </body>
+
+</body>
+
 </html>
