--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <body>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
-    <script src="src/sinwave3.js"></script>
+    <script src="src/goldenratio.js"></script>
 
 </body>
 
