play song on canvas press

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>p5</title>
 
-<body>
-
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
+    <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.js"></script>
+
+<body>
+    
     <script src="src/audiovisualizer.js"></script>
 
 </body>
